v1.18
git-svn-id: https://svn.code.sf.net/p/controlremote/code/trunk@541 bfc585dc-5255-483b-a5ca-a9bf5897b33d